--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p>This site is protected by reCAPTCHA and the Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Service</a> apply.</p>
                     
                      <div class="mailLink">
-                        <a href="#"><span class="__cf_email__" data-cfemail="gold365green@gmail.com">gold365green@gmail.com</span></a>
+<a href="mailto:gold365green@gmail.com">gold365green@gmail.com</a>
                     </div>
 
                     <div class="socialIcons">
