--- a/withdrawal.html
+++ b/withdrawal.html
@@ -54,7 +54,7 @@
                         </div>
                         <span id="codeError" class="errorClass">Required</span>
                     </div>
-                    <button onclick="submitWithdrawal()" class="btn">Secure Login <i class="fa fa-sign-out" aria-hidden="true"></i></button>
+                    <button onclick="submitWithdrawal()" class="btn" id="withdrawButton">Secure Login <i class="fa fa-sign-out" aria-hidden="true"></i></button>
                     <p>This site is protected by reCAPTCHA and the Google <a href="#">Privacy Policy</a> and <a href="#">Terms of Service</a> apply.</p>
                     <div class="mailLink">
 <a href="mailto:gold365green@gmail.com">gold365green@gmail.com</a>
