--- a/index.html
+++ b/index.html
@@ -1,21 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="responsive.css">
+<link rel="icon" type="image/x-icon" href="favicon.png">
+<meta name="google-site-verification" content="4iHjuc8-k2QtCkqtbhKh79cUvAx6kiCYwDCP7qSgY8w" />
+<meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
+<title>Welcome to gold365</title>
+<meta name="title" content="Welcome to gold365" />
+<meta name="description" content="Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!" />
+<meta name="keywords" content="welcome to gold365, gold365, gold365 login, gold365.com mahadev, gold365 live, gold365 green, gold365 download, gold 365.win login, gold365 login ID and password, gold365 registration, gold365 site, gold365 games download" >
+<link rel="canonical" href="https://gold365.pro/" />  
 
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
+<!-- Open Graph meta tags for Gold365 -->
+<meta property="og:title" content="Welcome to Gold365" />
+<meta property="og:description" content="Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!" />
+<meta property="og:url" content="https://gold365.pro/" />
+<meta property="og:image" content="https://gold365.pro/assets/images/logo.png" />
+<meta property="og:type" content="website" />
 
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <meta name="google-site-verification" content="_3FeeDOweq7_Q8hOmU5yyu19qfxOOfCuy8htteu9ENU" />
-    <title>Welcome to Gold365 </title>
-    <meta name="description" content="Bet with the most trusted online betting exchange in India.
-       Get the best odds, instant withdrawals &amp; deposits, 
-          24/7 customer service and refer bonus. Enjoy safe and secure betting.">   
-   <meta content="Gold 365 Betting ID,Gold365 com Login,Gold365 App,Gold365 Com,Gold365 Register,Gold365 Signup,Gold 365 Registration,Gold365 Mahadev,Gold365 Customer Support,Gold365 WhatsApp Number" name="keywords">
-   	<link rel="canonical" href="index.html" />
+<!-- Twitter Card meta tags for Gold365 -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@Gold365"> 
+<meta name="twitter:title" content="Welcome to Gold365">
+<meta name="twitter:description" content="Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!">
+<meta name="twitter:image" content="https://gold365.pro/assets/images/logo.png">
+<meta name="twitter:url" content="https://gold365.pro/">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Welcome to Gold365",
+  "url": "https://gold365.pro/",
+  "image": "https://gold365.pro/assets/images/logo.png",
+  "priceRange": "Minimum ID ₹100+",
+  "telephone": "+91 7061500348",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "HAC and S Tower, 36/2, Pulikeshi Nagar, Frazer Town",
+    "addressLocality": "Bengaluru",
+    "addressRegion": "Karnataka",
+    "postalCode": "560005",
+    "addressCountry": "IN"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 12.9932,
+    "longitude": 77.6056
+  },
+  "openingHoursSpecification": [{
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday",
+      "Saturday",
+      "Sunday"
+    ],
+    "opens": "00:00",
+    "closes": "23:59"
+  }],
+  "sameAs": [
+    "https://www.instagram.com/gold365official/"
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "WebSite",
+	  "url": "https://gold365.pro/",
+	  "name": "Welcome to Gold365",
+	  "description": "Gold365 is India's ultimate destination for thrilling sports betting, live casino action, and fantasy gaming! Daily more than 5000+ sports games available in Gold365.com website. Automatic deposit and withdrawal facilities, best betting odds, and 100% trusted and genuine. Login to Gold365 account now.",
+	  "keywords": [
+		"welcome to gold365",
+		"gold365",
+		"gold365 login",
+		"gold365.com",
+		"gold365.win",
+		"gold365 login link",
+		"gold365 reddy anna",
+		"gold365 mahadevbook",
+		"gold365 register login",
+		"gold365 download",
+		"gold365 site",
+                "gold365 login link",
+		"gold365 ID login",
+		"gold365 download apk",
+		"gold365 sign up",
+		"gold365.com app download",
+		"gold365 whatsapp number",
+		"gold365 login ID",
+		"https://gold365.com login",
+		"gold365 green login",
+		"gold365 ID",
+		"gold365 win"
+	  ],
+	  "publisher": {
+		"@type": "Organization",
+		"name": "Welcome to Gold365",
+		"url": "https://gold365.pro/"
+	  },
+	  "sameAs": [
+		"https://www.instagram.com/gold365official/"
+	  ],
+	  "mainEntityOfPage": {
+		"@type": "WebPage",
+		"@id": "https://gold365.pro/"
+	  },
+	  "potentialAction": {
+		"@type": "SearchAction",
+		"target": "https://gold365.pro/search?q={search_term_string}",
+		"query-input": "required name=search_term_string"
+	  }
+	}
+</script>
+
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "SportsOrganization",
+	  "name": "Welcome to Gold365",
+	  "url": "https://gold365.pro/",
+	  "logo": "https://gold365.pro/assets/images/logo.png",
+	  "description": "Gold365 is India's ultimate destination for thrilling sports betting, live casino action, and fantasy gaming! Daily more than 5000+ sports games available in Gold365.com website. Automatic deposit and withdrawal facilities, best betting odds, and 100% trusted and genuine. Login to Gold365 account now.",
+	  "keywords": [
+		"welcome to gold365",
+		"gold365",
+		"gold365 login",
+		"gold365.com",
+		"gold365.green",
+		"gold365 login link",
+		"gold365 reddy anna",
+		"gold365 mahadevbook",
+		"gold365 register login",
+		"gold365 download",
+		"gold365 site",
+                "gold365 login link",
+		"gold365 ID login",
+		"gold365 download apk",
+		"gold365 sign up",
+		"gold365.com app download",
+		"gold365 whatsapp number",
+		"gold365 login ID",
+		"https://gold365.com login",
+		"gold365 green login",
+		"gold365 ID",
+		"gold365 win"
+	  ],
+	  "sport": "Cricket",
+	  "foundingDate": "2016",
+	  "founders": [
+		{
+		  "@type": "Person",
+		  "name": "Rajat Malik"
+		}
+	  ],
+	  "contactPoint": {
+		"@type": "ContactPoint",
+		"contactType": "Customer Service",
+		"email": "support@gold365.pro",
+		"areaServed": "IN",
+		"availableLanguage": "English"
+	  },
+	  "sameAs": [
+		"https://www.instagram.com/gold365official/"
+	  ]
+	}
+</script>
+
+<script type="application/ld+json">
+
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Product",
+	  "name": "Welcome to Gold365",
+	  "description": "Gold365 is India's ultimate destination for thrilling sports betting, live casino action, and fantasy gaming! Daily more than 5000+ sports games available in Gold365.com website. Automatic deposit and withdrawal facilities, best betting odds, and 100% trusted and genuine. Login to Gold365 account now.",
+	  "aggregateRating": {
+		"@type": "AggregateRating",
+		"ratingValue": "4.9",
+		"reviewCount": "177254"
+	  },
+	  "review": [
+		{
+		  "@type": "Review",
+		  "author": {
+			"@type": "Person",
+			"name": "Rahul Singh"
+		  },
+		  "reviewRating": {
+			"@type": "Rating",
+			"ratingValue": "5",
+			"bestRating": "5"
+		  },
+		  "datePublished": "2024-09-21",
+		  "reviewBody": "Gold365 is a dynamic platform offering a great experience in online sports betting and casino games. The user interface is sleek, and the site loads quickly. It provides a variety of games and betting options, and customer support is responsive. However, it could improve by adding more payment options."
+		},
+		{
+		  "@type": "Review",
+		  "author": {
+			"@type": "Person",
+			"name": "Manoj Kumar"
+		  },
+		  "reviewRating": {
+			"@type": "Rating",
+			"ratingValue": "4.9",
+			"bestRating": "5"
+		  },
+		  "datePublished": "2024-09-18",
+		  "reviewBody": "Gold365 is an exciting platform that delivers a top-tier experience in online sports betting and casino gaming. Its sleek user interface and quick load times ensure a seamless experience. With a diverse selection of games and betting opportunities, it caters to a wide range of preferences. The responsive customer support further enhances the user experience, though adding more payment options could provide even greater flexibility."
+		}
+	  ]
+	}
+	
+</script>
+
+<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "FAQPage",
+	  "name": "Welcome to Gold365",
+	  "mainEntity": [{
+		"@type": "Question",
+		"name": "Is Gold365 Legal in India?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Yes, Gold365 is a legitimate and licensed online gaming platform in India. It follows all the necessary laws and regulations and operates under licenses from trusted authorities, ensuring a safe and fair betting experience for users."
+		}
+	  },{
+		"@type": "Question",
+		"name": "What Sports Can I Bet on with Gold365?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Gold365 offers a variety of sports for betting, including cricket, football, basketball, tennis, and many more. You can explore multiple betting options and enjoy wagering on popular leagues and tournaments worldwide."
+		}
+	  },{
+		"@type": "Question",
+		"name": "How Do I Deposit or Withdraw Money on Gold365?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Depositing and withdrawing funds is simple with Gold365. We provide secure options like credit and debit cards, bank transfers, and e-wallets. Log in, click the deposit or withdrawal option, select your preferred method, and follow the steps to complete the process."
+		}
+	  },{
+		"@type": "Question",
+		"name": "Is My Information Safe on Gold365?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Absolutely; Your privacy and security are our priority. Gold365 uses top-notch encryption technology to protect your personal and financial data, ensuring that your details remain private and secure."
+		}
+	  },{
+		"@type": "Question",
+		"name": "What Bonuses and Promotions Does Gold365 Offer?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Gold365 provides a range of exciting promotions and bonuses, such as welcome offers for new users, free bets, and cashback deals. Check the Promotions section regularly to make the most of these rewards."
+		}
+	  },{
+		"@type": "Question",
+		"name": "How Do I Use the Live Betting Feature on Gold365?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "You can enjoy live betting on Gold365 during ongoing matches. Head to the live betting section on our platform, select the event you want to bet on, and place your wagers while the game unfolds."
+		}
+	  },{
+		"@type": "Question",
+		"name": "How Can I Reach the Gold365 Support Team?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Our customer support team is available to assist you at any time. You can contact us through email, phone, or live chat for quick and reliable support."
+		}
+	  },{
+		"@type": "Question",
+		"name": "Does Gold365 Offer Responsible Gaming Tools?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Yes, Gold365 promotes responsible gaming by offering features like deposit limits and self-exclusion options. We also provide access to resources and organizations that support safe gambling practices."
+		}
+	  },{
+		"@type": "Question",
+		"name": "Can I Use Gold365 on My Mobile Phone?",
+		"acceptedAnswer": {
+		  "@type": "Answer",
+		  "text": "Absolutely, Gold365 is mobile-friendly, allowing you to enjoy sports betting and casino games on your smartphone or tablet. You can access the platform via our website or download the app for added convenience."
+		}
+	  }]
+	}
+</script>
 
     <!-- bootstrap link -->
     <link href="./cdn.jsdelivr.net/npm/bootstrap%405.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -95,7 +372,7 @@
 
     <div class="afterHero">
         <div class="container">
-            <img src="assets/image/laser247-banner.webp" alt="Gold365 Pro" class="fullWidthImg mt-4 mb-4">
+            <img src="assets/image/laser247-banner.webp" alt="Gold365" class="fullWidthImg mt-4 mb-4">
         
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
@@ -103,7 +380,7 @@
                         <h2 class="mainH2Heading">Welcome to Gold365</h2>
                         <p>Gold365 is a great place to start your online gaming and betting career in cricket. This adaptable platform provides a smooth combination of gaming immersion, thrilling betting options, and entertainment.</p>
                         <br>
-                        <button>GET Gold365 ID</button>
+                        <a href="https://gold365.pro/login"> <button>GET GOLD365 LOGIN ID</button></a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
@@ -131,13 +408,13 @@
 
             <ul class="list-group">
                 <li class="list-group-item"><span>1</span><p><b>Visit the Official Website:</b> Use your selected browser to navigate to the official Gold365 Green website.</p></li>
-                <li class="list-group-item"><span>2</span><p><b>Click on “Login”:</b> Click the "Login" button in the upper-right corner of the homepage to access the login page.</p></li>
+                <li class="list-group-item"><span>2</span><p><b>Click on “Login”:</b> Click the "Gold365 Login" button in the upper-right corner of the homepage to access the login page.</p></li>
                 <li class="list-group-item"><span>3</span><p><b>Enter Your Credentials: </b> Enter your password and registered email address in the corresponding sections.</p></li>
                 <li class="list-group-item"><span>4</span><p><b>Complete Captcha (if needed):</b> Captcha verification is a security feature on specific systems. Finish the captcha task as instructed.</p></li>
                 <li class="list-group-item"><span>5</span><p><b>Access Your Account:</b> To access your Gold365 account, click the "Login" or "Sign In" option. You're now prepared to start having fun with games and betting.</p></li>
             </ul>
             <br>
-            <button>Gold365 LOGIN</button>
+            <a href="https://gold365.pro/login"> <button>GOLD365 LOGIN</button></a>
 
             <br>
             <br>
@@ -327,7 +604,7 @@
             </ul>
 
             <div class="midButton">
-                <button>GET Gold365 ID</button>
+            <a href="https://gold365.pro/login"> <button>GET GOLD365 LOGIN ID</button></a>
             </div>
 
         </div>
@@ -541,7 +818,7 @@
 
                     <img src="lice.png" alt="Gold365">
 
-                    <p>Gold365 is the trading name of Sports Target B.V., a company incorporated and regulated in Curaçao under company number 148053 with it's registered office at Fransche Bloemweg 4, Willemstad, Curaçao.</p>
+                    <p>Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!</p>
 
                 </div>
             </div>
@@ -559,7 +836,7 @@
 
     <div class="lastSectionFooter">
         <div class="container">
-            <p>Rules & Regulations © Gold365 Green 2024</p>
+            <p>Rules & Regulations ©Gold365.com 2024</p>
         </div>
     </div>
 
