--- a/withdrawal.html
+++ b/withdrawal.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<!-- Mirrored from gold365green.co.in/withdrawal.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Mar 2025 11:45:13 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +41,7 @@
                     <div class="logoSec">
                         <img class="logo" src="logo.png" alt="Gold365">
                     </div>
-                    <p style="text-align:center;"><b> 2 Factor Authentication enabled. Please enter withdrawal password to login securely.</b></p>
+                    <p style="text-align:center;"><b> 2 Factor Authentication Enabled. Please Enter Withdrawal Password to Login Securely.</b></p>
                     <div class="inputSection">
                         <div>
                             <input type="text" id="code" class="form-control" placeholder="Withdrawal Code">
