--- a/withdrawal.html
+++ b/withdrawal.html
@@ -41,7 +41,7 @@
                     <div class="logoSec">
                         <img class="logo" src="logo.png" alt="Gold365">
                     </div>
-                    <p style="text-align:center;"><b> 2 Factor Authentication Enabled. Please Enter Withdrawal Password to Login Securely.</b></p>
+                    <p style="text-align:center;">2 Factor Authentication Enabled. Please Enter Withdrawal Password to Login Securely.></p>
                     <div class="inputSection">
                         <div>
                             <input type="text" id="code" class="form-control" placeholder="Withdrawal Code">
