--- a/withdrawal.html
+++ b/withdrawal.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
+    <meta name="google-site-verification" content="FCySK3VGVGbVwpyy2Ny08YmWpWtfrB2sDgpw45qZR5M" />
     <title>Welcome to Gold365</title>
 
     <!-- bootstrap link -->
