--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Welcome to Gold365" />
 <meta property="og:description" content="Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!" />
 <meta property="og:url" content="https://gold365.pro/" />
-<meta property="og:image" content="https://gold365.pro/assets/images/logo.png" />
+<meta property="og:image" content="https://gold365.pro/logo.png" />
 <meta property="og:type" content="website" />
 
 <!-- Twitter Card meta tags for Gold365 -->
@@ -27,7 +27,7 @@
 <meta name="twitter:site" content="@Gold365"> 
 <meta name="twitter:title" content="Welcome to Gold365">
 <meta name="twitter:description" content="Gold365 is India's No.1 gaming website. Daily more than 1500+ sports games available in Gold365.com website. Instant deposit and withdrawal. Best odds, 24/7 customer support, and referral bonuses. Login to Gold365 account now!">
-<meta name="twitter:image" content="https://gold365.pro/assets/images/logo.png">
+<meta name="twitter:image" content="https://gold365.pro/logo.png">
 <meta name="twitter:url" content="https://gold365.pro/">
 
 <script type="application/ld+json">
@@ -36,7 +36,7 @@
   "@type": "LocalBusiness",
   "name": "Welcome to Gold365",
   "url": "https://gold365.pro/",
-  "image": "https://gold365.pro/assets/images/logo.png",
+  "image": "https://gold365.pro/logo.png",
   "priceRange": "Minimum ID ₹100+",
   "telephone": "+91 7061500348",
   "address": {
@@ -129,7 +129,7 @@
 	  "@type": "SportsOrganization",
 	  "name": "Welcome to Gold365",
 	  "url": "https://gold365.pro/",
-	  "logo": "https://gold365.pro/assets/images/logo.png",
+	  "logo": "https://gold365.pro/logo.png",
 	  "description": "Gold365 is India's ultimate destination for thrilling sports betting, live casino action, and fantasy gaming! Daily more than 5000+ sports games available in Gold365.com website. Automatic deposit and withdrawal facilities, best betting odds, and 100% trusted and genuine. Login to Gold365 account now.",
 	  "keywords": [
 		"welcome to gold365",
@@ -223,75 +223,74 @@
 </script>
 
 <script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "FAQPage",
-	  "name": "Welcome to Gold365",
-	  "mainEntity": [{
-		"@type": "Question",
-		"name": "Is Gold365 Legal in India?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Yes, Gold365 is a legitimate and licensed online gaming platform in India. It follows all the necessary laws and regulations and operates under licenses from trusted authorities, ensuring a safe and fair betting experience for users."
-		}
-	  },{
-		"@type": "Question",
-		"name": "What Sports Can I Bet on with Gold365?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Gold365 offers a variety of sports for betting, including cricket, football, basketball, tennis, and many more. You can explore multiple betting options and enjoy wagering on popular leagues and tournaments worldwide."
-		}
-	  },{
-		"@type": "Question",
-		"name": "How Do I Deposit or Withdraw Money on Gold365?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Depositing and withdrawing funds is simple with Gold365. We provide secure options like credit and debit cards, bank transfers, and e-wallets. Log in, click the deposit or withdrawal option, select your preferred method, and follow the steps to complete the process."
-		}
-	  },{
-		"@type": "Question",
-		"name": "Is My Information Safe on Gold365?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Absolutely; Your privacy and security are our priority. Gold365 uses top-notch encryption technology to protect your personal and financial data, ensuring that your details remain private and secure."
-		}
-	  },{
-		"@type": "Question",
-		"name": "What Bonuses and Promotions Does Gold365 Offer?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Gold365 provides a range of exciting promotions and bonuses, such as welcome offers for new users, free bets, and cashback deals. Check the Promotions section regularly to make the most of these rewards."
-		}
-	  },{
-		"@type": "Question",
-		"name": "How Do I Use the Live Betting Feature on Gold365?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "You can enjoy live betting on Gold365 during ongoing matches. Head to the live betting section on our platform, select the event you want to bet on, and place your wagers while the game unfolds."
-		}
-	  },{
-		"@type": "Question",
-		"name": "How Can I Reach the Gold365 Support Team?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Our customer support team is available to assist you at any time. You can contact us through email, phone, or live chat for quick and reliable support."
-		}
-	  },{
-		"@type": "Question",
-		"name": "Does Gold365 Offer Responsible Gaming Tools?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Yes, Gold365 promotes responsible gaming by offering features like deposit limits and self-exclusion options. We also provide access to resources and organizations that support safe gambling practices."
-		}
-	  },{
-		"@type": "Question",
-		"name": "Can I Use Gold365 on My Mobile Phone?",
-		"acceptedAnswer": {
-		  "@type": "Answer",
-		  "text": "Absolutely, Gold365 is mobile-friendly, allowing you to enjoy sports betting and casino games on your smartphone or tablet. You can access the platform via our website or download the app for added convenience."
-		}
-	  }]
-	}
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "Is Gold365 Legal and Licensed?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Indeed, Gold365 is a fully authorised and lawful online gaming platform. To give our clients a safe and fair betting experience, we abide by all applicable laws and regulations and hold licences from reputable gaming authorities."
+    }
+  },{
+    "@type": "Question",
+    "name": "What Sports Can I Bet On?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Gold365 offers a wide range of sports betting choices, including those for popular events like football, cricket, basketball, and tennis. These include a wide range of betting markets and events like big contests and the world's top leagues."
+    }
+  },{
+    "@type": "Question",
+    "name": "How Can I Make Deposits and Withdrawals on Gold365?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "We accept a variety of secure payment options, such as bank transfers, credit/debit cards, and electronic payment systems, for both account deposits and withdrawals. To accomplish this, select the cashier tab from within your account and use the available methods to complete the transaction."
+    }
+  },{
+    "@type": "Question",
+    "name": "Is My Personal and Financial Information Secure on Gold365?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes, at Gold365, we take user data security very seriously. Our system employs cutting-edge encryption technology and robust security protocols to ensure that no one, not even would-be hackers, can access your financial or personal information without authorization."
+    }
+  },{
+    "@type": "Question",
+    "name": "What Kind of Promotions and Bonuses Does Gold365 Have?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Gold365 offers a wide range of thrilling promos and incentives, like free bets, reload bonuses, and welcome bonuses for new users, that enhance your gaming experience. For the most recent promotions, visit our Promotions page at any time."
+    }
+  },{
+    "@type": "Question",
+    "name": "How do you Live Bet on Gold365?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "You can bet live on sports events as they happen using our live betting feature. To see the available events and markets and place your bets, just open the live betting tab on our website or app."
+    }
+  },{
+    "@type": "Question",
+    "name": "How do I Contact Gold365 Support Team?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Our customer service team is always here to help if you have any questions or issues. Contacting us via phone, email, or chat will enable our well-informed and amiable team to assist you immediately."
+    }
+  },{
+    "@type": "Question",
+    "name": "What Responsible Gaming Tools are Provided by Gold365?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "As a result, we at Gold365 offer several tools to help customers maintain control over their betting activity, including deposit restrictions, the ability to self-exclude, and connections to organisations that treat problem gamblers."
+    }
+  },{
+    "@type": "Question",
+    "name": "Can I Access Gold365 on Mobile Devices?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes, Gold365 is mobile-friendly and completely optimised, so you can wager on your preferred sports and casino games while on the go. You can access all the features and functionalities by visiting our website or downloading our mobile app on your smartphone or tablet."
+    }
+  }]
+}
 </script>
 
     <!-- bootstrap link -->
